Revert to icons object in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,23 +3,15 @@
     "name": "Hexahex",
     "description": "Randomly generated colour palette which lets you copy colour code hex values quickly",
     "version": "0.1.0",
-    "icons": [
-        {
-            "128": "hex128.png"
-        },
-        {
-            "192": "hex192.png"
-        },
-        {
-            "512": "hex512.png"
-        }
-    ],
+    "icons": {
+        "128": "hex128.png",
+        "192": "hex192.png",
+        "512": "hex512.png"
+    },
     "browser_action": {
         "default_popup": "index.html",
         "default_title": "Hexahex",
         "default_icon": "hex128.png"
     },
-    "permissions": [
-        "activeTab"
-    ]
+    "permissions": ["activeTab"]
 }
