--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
+            - name: Install dependencies
+              run: npm install
             - name: Semantic Release
               run: npm run semantic-release
               env:
