--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - name: Install dependencies
               run: npm install
+            - name: Run tests
+              run: npm test
             - name: Semantic Release
               run: npm run semantic-release
               env:
