feat: Add coloured names Changes - fetched coloured names from https://github.com/meodai/color-names - changed view to 2 columns for better readability - copy text changes to copied momentarily for better indication - added few function tests

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 2,
     "name": "Hexahex",
+    "default_locale": "en",
     "description": "Randomly generated colour palette which lets you copy colour code hex values quickly",
-    "version": "0.1.2",
+    "version": "0.3.0",
     "icons": {
         "128": "hex128.png",
         "192": "hex192.png",
@@ -13,5 +14,6 @@
         "default_title": "Hexahex",
         "default_icon": "hex128.png"
     },
-    "permissions": []
+    "permissions": [],
+    "offline_enabled": false
 }
